# nfl-wr-clustering

./: .gitignore  README.md  pyproject.toml
nfl-wr-k-means-clustering/: main.py
nfl-wr-k-means-clustering/scraper/: scraper.py
