[project]
name = "nfl-wr-clustering"
version = "0.1.0"
description = "Cluster all Wide Receivers based on their Combine data."
authors = [
    {name = "etnguyen401",email = "nguyeneric280@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
