[project]
name = "nfl-wr-clustering"
version = "0.1.0"
description = "Cluster all Wide Receivers based on their Combine data."
authors = [
    {name = "etnguyen401",email = "nguyeneric280@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "nflreadpy (>=0.1.5,<0.2.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
